--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,6 +39,11 @@ h1, h2, h3, h4, h5, h6, p {
 
 }
 
+#aboutme img {
+  width: 20rem;
+  height: 20rem;
+}
+
 #navbar {
   padding-top: 1.5rem;
   width: 30%;
